--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,45 @@
 .App {
   text-align: center;
+  font-family: "Helvetica", "Times New Roman", "Tahoma";
 }
-
-.App-logo {
-  /*animation: App-logo-spin infinite 20s linear;*/
-  height: 500px;
-}
-
 .App-header {
-  background-color: white;
-  height: 500px;
-  padding: 20px;
-  color: white;
+  display: inline;
+  width: 100%;
+  height: 400px;
 }
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
+/*.App-logo {
+  float: left;
+  height: 400px;
+  border: 1px solid black;
+  padding: 0px 0px 0px 0px;
+}*/
+.mainlogo {
+  float: left;
+  border: 2px solid black;
+  background-image: url('./images/SeaSpire_logo2.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  /*background-color: white;*/
+  padding: 0px 0px 0px 0px;
+  height: 400px;
+  width: 200px;
 }
 .menu {
-  height: 100%;
-  border: 3px solid white;
+  width: 100%;
+  height: 400px;
+  /*background-color: #1A6D8F;*/
+  /*border: 3px solid white;*/
+  /*display: flex;
+  align-items: center;
+  justify-content: center;*/
+  text-align: center;
   vertical-align: middle;
-  background-color: #1A6D8F;
 }
 .menu li {
-  padding: 30px;
+  /*padding: 30px;*/
   margin-left: 100px;
   margin-right: 100px;
+  padding-top: 50px;
   /*border: 1px solid black;*/
   display: inline-block;
   font-size: 30px;
@@ -43,6 +52,15 @@
 .menu a:hover {
   text-decoration: underline;
   /*font-weight: bold;*/
+}
+.mainpic {
+  background-image: url('./images/saronic.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 800px;
+  width: 100%;
+  border-top: 3px solid white;
 }
 .dropdown-container {
   display: inline-block;
@@ -138,7 +156,7 @@ a.linkedin {
   left: 20%;
 }
 .site-page {
-  height: 3000px;
+  height: 3800px;
   padding: 20px;
   background-size: cover;
   border: 3px solid white;
@@ -207,6 +225,37 @@ a.linkedin {
   top: 10%;
 }
 .history_text p {
+  font-size: 20px;
+  color: #AFBDC5;
+  border: 1px solid black;
+  position: absolute;
+  left: 20%;
+  top: 15%;
+}
+.other {
+  min-height: 800px;
+  background-image: url('./images/shipfront.jpg');
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.other_text {
+  background-color: #1A6D8F;
+  height: 400px;
+  width: 100%;
+  position: relative;
+}
+.other_text strong {
+  font-weight: bold;
+  font-size: 25px;
+  color: #AFBDC5;
+  border: 1px solid black;
+  position: absolute;
+  left: 20%;
+  top: 10%;
+}
+.other_text p {
   font-size: 20px;
   color: #AFBDC5;
   border: 1px solid black;
