--- a/src/App.css
+++ b/src/App.css
@@ -15,14 +15,13 @@
   padding: 0px 0px 0px 0px;
 }*/
 .mainlogo {
-  float: left;
   /*border: 2px solid black;*/
   background-image: url('./images/SeaSpire_logo2.png');
   background-size: contain;
   background-repeat: no-repeat;
   position: absolute;
-  left: 10%;
-  top: 3%;
+  left: 5%;
+  top: 1%;
   /*background-color: white;*/
   padding: 0px 0px 0px 0px;
   /*margin-bottom: 30px;*/
@@ -74,10 +73,8 @@
   background-color: #1A6D8F;
   /*transform: translateY(-10px);*/
   border: 1px solid #1A6D8F;
-  transition-property: opacity, transform;
-  transition-duration: 2s, 0.2s;
-  transition-timing-function: initial, initial;
-  transition-delay: initial, initial;
+  transition: opacity 2s;
+  transition: transform 2s;
   left: 0;
   /*box-sizing: border-box;*/
 }
@@ -102,7 +99,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 800px;
+  height: 900px;
   width: 100%;
   border-top: 3px solid white;
 }
@@ -149,7 +146,24 @@
 .dropdown-content {
     display: block;
 }
+.slider {
+  position: relative;
+}
 
+.slideText {
+  background-color: #AFBDC5;
+  position: relative;
+}
+.nextButton {
+  position: absolute;
+  top: 50%;
+  right: 5%;
+}
+.leftButton {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+}
 
 .site-footer {
   background-color: #AFBDC5;
@@ -202,7 +216,7 @@ a.linkedin {
 
 }
 .site-page {
-  height: 5400px;
+  height: 6100px;
   /*padding: 20px;*/
   background-size: cover;
   /*border: 3px solid white;*/
