--- a/src/App.css
+++ b/src/App.css
@@ -146,25 +146,82 @@
 .dropdown-content {
     display: block;
 }
+.scrollArrow {
+  display: inline-block;
+  position: relative;
+  overflow: hidden;
+  outline: none;
+  transform: translateY(1200%);
+  /*font-size: 60px;*/
+  color: white;
+  letter-spacing: 0.2em;
+}
+.scrollArrow:before {
+  opacity: 1;
+  width: 100%;
+  -webkit-transform: translate(-150%,0);
+  -moz-transform: translate(-150%,0);
+  -ms-transform: translate(-150%,0);
+  -o-transform: translate(-150%,0);
+  transform: translate(-150%,0);
+}
+.scrollArrow:hover:before {
+  opacity: 1;
+  color: white;
+  content: attr(data-hover);
+  font-size: 20px;
+  cursor: pointer;
+}
 .slider {
   position: relative;
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  white-space: nowrap;
+}
+.sliderContainer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.slide {
+  display: inline-block;
+  width: 100%;
 }
 
 .slideText {
   background-color: #AFBDC5;
+  color: #1A6D8F;
   position: relative;
+}
+.slideText strong {
+  font-size: 30px;
+  position: absolute;
+  left: 20%;
+  top: 10%;
+}
+.slideText p {
+  font-size: 20px;
+  position: absolute;
+  left: 20%;
+  top: 25%;
 }
 .nextButton {
   position: absolute;
-  top: 50%;
+  top: 30%;
   right: 5%;
 }
-.leftButton {
+.rightButton:active {
+  color: #AFBDC5;
+}
+.backButton {
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 5%;
 }
-
+.leftButton:active {
+  color: #AFBDC5;
+}
 .site-footer {
   background-color: #AFBDC5;
   /*background-color: grey;*/
@@ -216,7 +273,7 @@ a.linkedin {
 
 }
 .site-page {
-  height: 6100px;
+  height: 6500px;
   /*padding: 20px;*/
   background-size: cover;
   /*border: 3px solid white;*/
@@ -274,6 +331,7 @@ a.linkedin {
   color: #AFBDC5;
   font-size: 50px;
   width: 100%;
+  position: relative;
 }
 /*.fleet_pic {
   background-size: cover;
@@ -303,6 +361,16 @@ a.linkedin {
   position: absolute;
   left: 20%;
   top: 15%;
+}
+.fleet_title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 60px;
+  font-weight: 500;
+  color: white;
+  letter-spacing: 0.2em;
 }
 .services {
   min-height: 700px;
