--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,44 @@
   margin: 0px 0px 0px 0px;
   /* border:1px solid black; */
 }
+.bm-burger-button {
+  position: fixed;
+  width: 40px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+  color: red;
+}
+.bm-burger-bars {
+  background: #373a47;
+}
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+.menu-item {
+  color:  #1A6D8F;
+  padding-bottom: 30px;
+  text-decoration: none;
+  font-size: 30px;
+}
+.menu-item--small {
+  color:  red;
+  padding-bottom: 20px;
+  text-decoration: none;
+}
+
 /*.App-logo {
   float: left;
   height: 400px;
@@ -59,13 +97,13 @@
 .menu li {
   color: #1A6D8F;
   /*border: 1px solid black;*/
-  padding: 15px;
+  padding: 15px 40px;
   /*margin-left: 100px;
   margin-right: 100px;*/
   /*padding-top: 150px;*/
   font-weight:  400;
   display: inline-block;
-  font-size: 16px;
+  font-size: 24px;
   position: relative;
   /* left: 10%; */
   transition: color 3s;
@@ -487,48 +525,46 @@ a.linkedin {
 }
 
 @media only screen and (max-width: 600px) {
-  .menu {
+  .App,
+  .App-Header,
+  .menu,
+  .dropdown-content,
+  .site-page,
+  .site-footer,
+  .about {
     width: 100%;
   }
   ul {
     width: 100%;
   }
-  .App {
-    width: 100%;
-  }
-  .App-Header {
-    width: 100%;
-  }
-  /* .mainlogo {
-    width: 100%;
-  } */
-  .dropdown-content {
-    width: 100%;
-  }
-  .site-page {
-    width: 100%;
-  }
-  .site-footer {
-    width: 100%;
-  }
-  .about {
-    width: 100%;
-  }
-}
-@media only screen and (min-width: 600px) {
-  .mainpic {
-    width: 100%;
-  }
-  .mainlogo {
-    /* border:1px solid black; */
-  }
-}
-@media only screen and (max-width: 400px) {
   .emailtext,
   .addresstext {
     font-size:16px;
   }
-  .mainlogo {
-    /* border:1px solid black; */
+  .menu {
+    display:none;
+  }
+  .mainpic {
+    background-size: contain;
+    height: 350px;
+    width: 100%;
+  }
+}
+@media only screen and (max-width: 1100px){
+  .menu {
+    display:none;
+  }
+}
+@media only screen and (min-width: 1100px){
+  .mainpic {
+    background-size: cover;
+    height: 1200px;
+    width: 100%;
+  }
+  .bm-burger-button {
+    display:none;
+  }
+  .menu {
+    height:50px;
   }
 }
