--- a/src/App.css
+++ b/src/App.css
@@ -275,7 +275,24 @@
   font-size: 20px;
   position: absolute;
   left: 20%;
-  top: 25%;
+  top: 15%;
+}
+.slideText table {
+  position: relative;
+  top:25%;
+  left:20%;
+  width:400px;
+}
+.td1 {
+  background-color: #1A6D8F;
+  color: #AFBDC5;
+  font-size: 20px;
+}
+.td2 {
+  padding-left:15px;
+  text-align:left;
+  font-size: 16px;
+  /* border:1px solid black; */
 }
 .nextButton {
   position: absolute;
@@ -351,7 +368,7 @@ a.linkedin {
 
 }
 .site-page {
-  height: 6500px;
+  height: 7000px;
   /*padding: 20px;*/
   background-size: cover;
   /*border: 3px solid white;*/
@@ -359,7 +376,7 @@ a.linkedin {
 }
 .about {
   min-height: 700px;
-  background-image: url('./images/shipyard.jpg');
+  background-image: url('./images/seaspire.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
@@ -368,7 +385,7 @@ a.linkedin {
 }
 .about_text {
   background-color: #1A6D8F;
-  height: 650px;
+  height: 1100px;
   width: 100%;
   position: relative;
 }
@@ -379,7 +396,7 @@ a.linkedin {
   color: #AFBDC5;
   position: absolute;
   left: 20%;
-  top: 10%;
+  top: 5%;
 }
 .about_text p {
   /*border: 1px solid black;*/
@@ -387,9 +404,13 @@ a.linkedin {
   color: #AFBDC5;
   position: absolute;
   left: 20%;
-  top: 15%;
+  top: 10%;
   width: 60%;
-  text-align: justify;
+  text-align: left;
+}
+.about_text span {
+  font-weight: 700;
+  color: black;
 }
 .about_title {
   position: absolute;
@@ -402,7 +423,7 @@ a.linkedin {
   letter-spacing: 0.2em;
 }
 .fleet {
-  min-height: 700px;
+  min-height: 300px;
   background-image: url('./images/fleet_test.jpg');
   background-attachment: fixed;
   background-position: center;
@@ -420,7 +441,7 @@ a.linkedin {
 }*/
 .fleet_text {
   background-color: #1A6D8F;
-  height: 650px;
+  height: 300px;
   width: 100%;
   position: relative;
 }
@@ -456,12 +477,13 @@ a.linkedin {
   letter-spacing: 0.2em;
 }
 .services {
-  min-height: 700px;
-  background-image: url('./images/ocean_main.jpg');
+  min-height: 900px;
+  background-image: url('./images/shipyard.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 .services_text {
   background-color: #1A6D8F;
@@ -489,17 +511,28 @@ a.linkedin {
   width: 60%;
   text-align: justify;
 }
+.services_title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 54px;
+  font-weight: 500;
+  color: white;
+  letter-spacing: 0.2em;
+}
 .other {
   min-height: 700px;
-  background-image: url('./images/sea_menu.jpg');
+  background-image: url('./images/aegeanSpire.jpg');
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
 }
 .other_text {
   background-color: #1A6D8F;
-  height: 650px;
+  height: 560px;
   width: 100%;
   position: relative;
 }
@@ -523,8 +556,18 @@ a.linkedin {
   width: 60%;
   text-align: justify;
 }
+.other_title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 60px;
+  font-weight: 500;
+  color: black;
+  letter-spacing: 0.2em;
+}
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 480px) {
   .App,
   .App-Header,
   .menu,
@@ -536,6 +579,9 @@ a.linkedin {
   }
   ul {
     width: 100%;
+  }
+  .site-page {
+    height:6040px;
   }
   .emailtext,
   .addresstext {
@@ -549,22 +595,121 @@ a.linkedin {
     height: 350px;
     width: 100%;
   }
+  .nextButton,
+  .backButton {
+    top: 12%;
+  }
+  .slideText table {
+    left:3%;
+    width:300px;
+    cellspacing: 0;
+    cellpadding: 0;
+  }
+  .td2 {
+    /* border:1px solid black; */
+    padding-right:100px;
+    /* background-color: red; */
+  }
+  .vessel1 {
+    background-size: contain;
+    /* height:200px; */
+    /* width:100%; */
+    height:100%;
+  }
 }
-@media only screen and (max-width: 1100px){
+@media only screen and (min-width:480px) {
+  .site-page {
+    height:5640px;
+  }
+  .slider {
+    height: 780px;
+  }
+  .slideText table {
+    left:5%;
+  }
+  .td2 {
+    width:100%;
+    /* border:1px solid black; */
+  }
+  .about_text {
+    height: 840px;
+  }
+  .other_text {
+    height: 420px;
+  }
+}
+@media only screen and (min-width:768px) {
+  .site-page {
+    height:5100px;
+  }
+  .fleet_text {
+    height: 150px;
+  }
+  .about_text {
+    height: 570px;
+  }
+  .other_text {
+    height: 300px;
+  }
+  .nextButton,
+  .backButton {
+    top: 20%;
+  }
+  .slideText table {
+    width:600px;
+  }
+}
+@media only screen and (max-width: 1024px){
   .menu {
     display:none;
   }
+  .nextButton,
+  .backButton {
+    top: 11%;
+  }
+  .vessel1 {
+    background-size:cover;
+    height:350px;
+    width:100%;
+  }
 }
-@media only screen and (min-width: 1100px){
+@media only screen and (min-width: 1024px){
   .mainpic {
     background-size: cover;
-    height: 1200px;
+    height: 380px;
     width: 100%;
+  }
+  .site-page {
+    height:5100px;
+  }
+  .slider {
+    height: 1000px;
+  }
+  .slideText table {
+    width:700px;
+  }
+  .vessel1 {
+    background-size:cover;
+    height:500px;
+    width:100%;
   }
   .bm-burger-button {
     display:none;
   }
   .menu {
     height:50px;
+  }
+  .nextButton,
+  .backButton {
+    top: 18%;
+  }
+  .fleet_text {
+    height: 150px;
+  }
+  .about_text {
+    height: 440px;
+  }
+  .other_text {
+    height: 250px;
   }
 }
